--- a/web/templates/sources.html
+++ b/web/templates/sources.html
@@ -11,12 +11,13 @@
 <div class="card">
   {{if .Sources}}
   <table>
-    <thead><tr><th>Name</th><th>Slug</th><th>Created</th></tr></thead>
+    <thead><tr><th>Name</th><th>Slug</th><th>Mode</th><th>Created</th></tr></thead>
     <tbody>
       {{range .Sources}}
       <tr>
         <td><a href="/sources/{{.Slug}}">{{.Name}}</a></td>
         <td><code>{{.Slug}}</code></td>
+        <td><span class="badge badge-{{.Mode}}">{{.Mode}}</span></td>
         <td>{{formatTime .CreatedAt}}</td>
       </tr>
       {{end}}
